--- a/user-service.yml
+++ b/user-service.yml
@@ -1,4 +1,10 @@
 spring:
+  h2:
+    console:
+      enabled: true
+      settings:
+        web-allow-others: true
+      path: /h2-console
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb
